code25_all/python/1942559.txt
L = []
file = urllib.urlopen("http://someurl.com/someText.txt")
line = file.readline()
while line != "" :
  L.append(line)
  line = file.readline()
appuifw.selection_list(choices=L)

 line = file.readline()
 ^
SyntaxError: invalid syntax

